[gd_scene load_steps=5 format=3 uid="uid://dpcjk8rmlgr0y"]

[ext_resource type="Texture2D" uid="uid://djmnuppjsubye" path="res://assets/sprites/time_box_paused.png" id="1_175yt"]
[ext_resource type="Texture2D" uid="uid://bd5hvu30bklmq" path="res://assets/sprites/time_box_playing.png" id="2_f207h"]
[ext_resource type="Script" uid="uid://dp2u2qisk1v6j" path="res://scripts/time_box.gd" id="3_kca1j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_03fx1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_175yt")
}, {
"duration": 1.0,
"texture": ExtResource("2_f207h")
}],
"loop": false,
"name": &"play",
"speed": 2.0
}]

[node name="TimeBox" type="TextureButton"]
custom_minimum_size = Vector2(120, 160)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_kca1j")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CenterContainer"]
sprite_frames = SubResource("SpriteFrames_03fx1")
animation = &"play"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0:00"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="UpdateTimer" type="Timer" parent="."]

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
